@@ -32,7 +32,7 @@ xpr_SOURCES =	\
         xpr.c \
         xpr.h
 
-appman_SOURCES = \
+appman_PRE = \
         xdpr.man \
         xpr.man
 
@@ -48,9 +48,9 @@ EXTRA_DIST = xdpr.script
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
